--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "browser-sync": "^2.14.0",
     "browserify": "^13.1.0",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-browserify": "^0.5.1",
     "gulp-notify": "^2.2.0",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
