--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "browser-sync": "^2.14.0",
     "browserify": "^13.1.0",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
