--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
   - node_modules
 before_install:
 - |
-  npm install -g npm@latest-2
+  npm install
   npm --version
 script:
   - npm run js-lint -s
