--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "gulp",
     "js-lint": "gulp jslint",
-    "test": "jest"
+    "sass-lint": "gulp stylelint"
   },
   "repository": {
     "type": "git",
@@ -46,7 +46,6 @@
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylelint": "^3.2.0",
-    "jest": "^15.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
