--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,7 @@
 {
   "extends": "eslint-config-airbnb",
-  "env": {
-    "browser": true
-  },
   "rules": {
+    "no-unused-vars": 0,
     "react/no-multi-comp": 0,
     "import/default": 0,
     "import/no-duplicates": 0,
