--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "css-loader": "^0.25.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^11.1.0",
+    "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0",
+    "eslint-plugin-react": "^6.6.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
     "node-sass": "^3.11.2",
