--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   # "extends": "airbnb",
   parser: "babel-eslint",
   "rules": {
-    "react/prop-types": [2]
+    # "react/prop-types": [2],
     # "no-unused-vars": 0,
     # "react/no-multi-comp": 0,
     # "import/default": 0,
@@ -19,6 +19,7 @@
     # "react/jsx-filename-extension": 0,
     # "arrow-body-style": 0,
     # "react/jsx-space-before-closing": 0,
+    # "no-undef": 0, # Should look into this one #
     # "eol-last": 0,
     # "max-len": ["error", 120],
     # "react/forbid-prop-types": 0,
