--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "gulp": "^3.9.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.24.1"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
@@ -44,8 +46,6 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.24.1",
     "node-sass": "^3.11.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.0.2",
