Added a 'watch' action

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "./node_modules/webpack/bin/webpack.js -p",
     "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --progress --colors --inline",
-    "lint": "eslint . --ext .js --ext .jsx --fix"
+    "lint": "eslint ./app/ --ext .js --ext .jsx --fix",
+    "watch": "webpack --watch --progress"
 
   },
   "repository": {
