--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic Structure for React app following Atomic Design",
   "scripts": {
     "build": "webpack -p",
-    "start": "webpack-dev-server --hot --progress --colors --inline",
+    "start": "webpack-dev-server --inline --hot --progress --colors",
     "lint": "eslint ./app/ --ext .js --ext .jsx --fix",
     "watch": "webpack --watch --progress",
     "clean": "rm -rf dist && npm cache clean"
@@ -52,8 +52,6 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "stylelint-webpack-plugin": "^0.4.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
