Update travis for yarn use

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ node_js:
   - 5
 sudo: false
 cache:
+  yarn: true
   directories:
   - node_modules
 before_install:
 - |
-  npm install
-  npm --version
+
 script:
   - npm run lint
