--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "webpack-dev-server --config ./webpack.dev.config.js --inline --hot --progress --colors",
     "build": "webpack --config ./webpack.prod.config.js --progress --colors",
     "lint": "eslint ./app/ --ext .js --ext .jsx --fix",
-    "watch": "webpack --watch --progress",
+    "watch": "webpack-dev-server --config ./webpack.dev.config.js --inline --hot --colors --watch --progress",
     "clean": "rm -rf dist && npm cache clean"
   },
   "repository": {
@@ -33,7 +33,16 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.5",
+    "html-webpack-plugin": "^2.24.1",
+    "stylelint": "^8.3.1",
+    "stylelint-webpack-plugin": "^0.9.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass-glob-importer": "^5.0.0-alpha.15",
+    "webpack-merge": "^4.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
@@ -48,19 +57,11 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "^2.24.1",
     "node-sass": "^4.7.2",
-    "node-sass-glob-importer": "^5.0.0-alpha.15",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "stylelint": "^8.3.1",
-    "stylelint-webpack-plugin": "^0.9.0",
-    "uglifyjs-webpack-plugin": "^1.0.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.5",
-    "webpack-merge": "^4.1.1"
+    "style-loader": "^0.19.0"
+
   }
 }
