--- a/package.json
+++ b/package.json
@@ -57,11 +57,11 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
+    "file-loader": "^2.0.0",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0"
-
   }
 }
